--- a/404.html
+++ b/404.html
@@ -1,6 +1,13 @@
 <html>
   <head>
-    <title>ES6标准参考教程</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>404 - idoc-template</title>
+    
+    <link rel="shortcut icon" href="xiaobaobao.png" type="image/x-icon">
+    <link rel="icon" href="xiaobaobao.png" type="image/x-icon">
+    
     <script>
       var loc = 'http://shenbao.github.io/idoc-template';
       var regex = /http:\/\/shenbao\.github\.io\/idoc-template\/([^#]+)#(.+)/;
@@ -11,8 +18,11 @@
         window.location = loc;
       }
     </script>
+  
   </head>
   <body>
+
     <p>redirecting...</p>
+  
   </body>
 </html>
