--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="error">Opps! ... File not found!</div>
 
     <div id="flip">
-      <div id="pageup">上一章</div><div id="pagedown">下一章</div>
+      <div id="pageup">prev</div><div id="pagedown">next</div>
     </div>
     
     <div class="progress-indicator-2"></div>
