--- a/index.html
+++ b/index.html
@@ -47,5 +47,15 @@
       <p>idoc文档</p>
     </noscript>
 
+    <footer class="">
+      <p class="copyright text-muted">
+          Copyright © hbx-boilerplate 2017
+          <br>
+          Theme by <a href="">name</a> |
+          <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=hbx-boilerplate&amp;type=star&amp;count=true">
+          </iframe>
+      </p>
+    </footer>
+
   </body>
 </html>
