--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           Copyright © hbx-boilerplate 2017
           <br>
           Theme by <a href="">name</a> |
-          <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=hbx-boilerplate&amp;type=star&amp;count=true">
+          <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
           </iframe>
       </p>
     </footer>
