--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <p>idoc文档</p>
     </noscript>
 
-    <footer class="">
+    <footer>
       <p class="copyright text-muted">
           Copyright © hbx-boilerplate 2017
           <br>
