--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="js/marked.js"></script>
     <script src="js/store.js"></script>
     <script src="js/ditto.js"></script>
+    <script src="js/others.js"></script>
     <script src="js/prism.js"></script>
 
   </head>
@@ -42,10 +43,6 @@
     <script>
       ditto.run();
     </script>
-    <noscript>
-      <p>idoc-template</p>
-      <p>idoc文档</p>
-    </noscript>
 
     <footer>
       <p class="copyright text-muted">
