--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <footer>
       <p class="copyright text-muted">
-          Copyright © hbx-boilerplate 2017
+          Copyright © idoc-template 2017
           <br>
           Theme by <a href="">name</a> |
           <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
