--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p class="copyright text-muted">
           Copyright © idoc-template 2017
           <br>
-          Theme by <a href="">name</a> |
+          Theme by <a href="https://github.com/ShenBao">ShenBao</a> |
           <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
           </iframe>
       </p>
