--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
     <title>404 - idoc-template</title>
     
-    <link rel="shortcut icon" href="xiaobaobao.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/xiaobaobao.png" type="image/x-icon">
     <link rel="icon" href="xiaobaobao.png" type="image/x-icon">
     
     <script>
