--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>idoc-template</title>
 
-    <link rel="shortcut icon" href="xiaobaobao.png" type="image/x-icon">
-    <link rel="icon" href="xiaobaobao.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/xiaobaobao.png" type="image/x-icon">
+    <link rel="icon" href="images/xiaobaobao.png" type="image/x-icon">
 
     <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
