--- a/index.html
+++ b/index.html
@@ -23,36 +23,42 @@
   </head>
   <body>
 
+    <div class="progress-indicator-2"></div>
+
     <!-- essential -->
     <div id="sidebar"></div>
-    <div id="content"></div>
+    <!--main-->
+    <div id="main">
+      <div id="content"></div>
+      <div id="comment"></div>
+
+      <div id="back_to_top">back to top</div>
+      <div id="edit">edit</div>
+
+      <div id="loading">Loading ...</div>
+      <div id="error">Opps! ... File not found!</div>
+      <footer>
+        <p class="copyright text-muted">
+            Copyright © idoc-template 2017
+            <br>
+            Theme by <a href="https://github.com/ShenBao">ShenBao</a> |
+            <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
+            </iframe>
+        </p>
+      </footer>
+
+    </div>
     <!-- optional -->
-    <div id="back_to_top">back to top</div>
-    <div id="edit">edit</div>
-    <div id="loading">Loading ...</div>
-    <div id="error">Opps! ... File not found!</div>
 
     <div id="flip">
       <div id="pageup">prev</div><div id="pagedown">next</div>
     </div>
     
-    <div class="progress-indicator-2"></div>
-
     <script src="config.js"></script>
 
     <script>
       ditto.run();
     </script>
-
-    <footer>
-      <p class="copyright text-muted">
-          Copyright © idoc-template 2017
-          <br>
-          Theme by <a href="https://github.com/ShenBao">ShenBao</a> |
-          <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
-          </iframe>
-      </p>
-    </footer>
 
   </body>
 </html>
