--- a/index.html
+++ b/index.html
@@ -37,15 +37,7 @@
 
       <div id="loading">Loading ...</div>
       <div id="error">Opps! ... File not found!</div>
-      <footer>
-        <p class="copyright text-muted">
-            Copyright © idoc-template 2017
-            <br>
-            Theme by <a href="https://github.com/ShenBao">ShenBao</a> |
-            <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px" height="20px" src="https://ghbtns.com/github-btn.html?user=ShenBao&amp;repo=idoc-template&amp;type=star&amp;count=true">
-            </iframe>
-        </p>
-      </footer>
+      <footer></footer>
 
     </div>
     <!-- optional -->
