--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
     </div>
     <!-- optional -->
-
-    <div id="flip">
-      <div id="pageup">prev</div><div id="pagedown">next</div>
+    <div id="page-turning">
+      <div id="flip">
+        <div id="pageup">prev</div><div id="pagedown">next</div>
+      </div>
     </div>
     
     <script src="config.js"></script>
