--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/others.css">
 
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
