--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div id="content"></div>
       <div id="comment"></div>
 
-      <div id="back_to_top">back to top</div>
+      <div id="back_to_top">to top</div>
       <div id="edit">edit</div>
 
       <div id="loading">Loading ...</div>
