--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>idoc-template</title>
+    <title>idoc-template | ShenBao</title>
 
     <link rel="shortcut icon" href="images/xiaobaobao.png" type="image/x-icon">
     <link rel="icon" href="images/xiaobaobao.png" type="image/x-icon">
