--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     <link rel="stylesheet" href="app/bower_components/normalize-css/normalize.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/others.css">
+    <link rel="stylesheet" href="css/emojify.css">
 
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/marked.js"></script>
     <script src="js/store.js"></script>
+
+    <script src="js/emojify.js"></script>
     <script src="js/ditto.js"></script>
+    
     <script src="js/others.js"></script>
     <script src="js/prism.js"></script>
 
